--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,3 +26,10 @@ spring.mvc.throw-exception-if-no-handler-found=true
 spring.mvc.static-path-pattern=/static
 
 spring.profiles.active=development
+
+
+# Tiempo máximo para establecer la conexión (en milisegundos)
+resttemplate.connect-timeout=5000
+
+# Tiempo máximo de espera para leer la respuesta (en milisegundos)
+resttemplate.read-timeout=10000
