--- a/pom.xml
+++ b/pom.xml
@@ -121,6 +121,25 @@
         <groupId>org.springframework.security</groupId>
         <artifactId>spring-security-oauth2-jose</artifactId>
     </dependency>
+	<dependency>
+		<groupId>com.evela.common_service</groupId>
+		<artifactId>common-service</artifactId>
+		<version>0.0.1</version>
+	</dependency>
+		<!-- MapStruct Core -->
+    <dependency>
+        <groupId>org.mapstruct</groupId>
+        <artifactId>mapstruct</artifactId>
+        <version>1.5.5.Final</version> <!-- Asegúrate de usar una versión compatible con Java 21 -->
+    </dependency>
+
+    <!-- MapStruct Processor (compilación) -->
+    <dependency>
+        <groupId>org.mapstruct</groupId>
+        <artifactId>mapstruct-processor</artifactId>
+        <version>1.5.5.Final</version>
+        <scope>provided</scope>
+    </dependency>
 	</dependencies>
 
 
@@ -138,6 +157,24 @@
 					</excludes>
 				</configuration>
 			</plugin>
+				<!-- Plugin de compilación para MapStruct -->
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>3.10.1</version>
+            <configuration>
+                <source>21</source>
+                <target>21</target>
+                <annotationProcessorPaths>
+                    <path>
+                        <groupId>org.mapstruct</groupId>
+                        <artifactId>mapstruct-processor</artifactId>
+                        <version>1.5.5.Final</version>
+                    </path>
+                </annotationProcessorPaths>
+            </configuration>
+        </plugin>
+
 		</plugins>
 	</build>
 
