--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,7 @@ spring.datasource.hikari.pool-name=HikariPool-1
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.jdbc.batch_versioned_data=true
 
 #https://github.com/spring-projects/spring-data-jpa/issues/2717
 spring.jpa.properties.jakarta.persistence.sharedCache.mode=ALL
