--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,6 +18,8 @@ spring.jpa.properties.hibernate.jdbc.batch_versioned_data=true
 #https://github.com/spring-projects/spring-data-jpa/issues/2717
 spring.jpa.properties.jakarta.persistence.sharedCache.mode=ALL
 spring.jpa.open-in-view=false
+#spring.main.allow-circular-references=true
+
 
 # Puerto del servidor
 server.port=8081
