Adding methods for roles and permissions users

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.jdbc.batch_versioned_data=true
+spring.jpa.properties.hibernate.ejb.interceptor=org.hibernate.ejb.event.spi.EventListenerConfigurator
 
 #https://github.com/spring-projects/spring-data-jpa/issues/2717
 spring.jpa.properties.jakarta.persistence.sharedCache.mode=ALL
